bug fix for wrong width due to display of browser scrollbar

--- a/src/slideshow.css
+++ b/src/slideshow.css
@@ -14,6 +14,10 @@
 	width: 100%;
 }
 
+.slideshow .wrapper.calculating {
+	height: 0;
+}
+
 .slideshow .slides {
 	position: relative;
 	z-index: 10;
